--- a/fp-ts-example/shapes.html
+++ b/fp-ts-example/shapes.html
@@ -1,12 +1,7 @@
 <!-- index.html -->
 <html>
   <body>
-    <canvas
-      id="canvas"
-      width="400"
-      height="400"
-      style="border: 1px solid black"
-    ></canvas>
+    <canvas id="canvas" width="400" height="400" style="border: 1px solid black"></canvas>
     <img id="bird" src="./images/bird.png" style="visibility: hidden" />
     <script src="./03_shapes.ts"></script>
   </body>
